--- a/veterinaria-fullstack/frontend/duenos.html
+++ b/veterinaria-fullstack/frontend/duenos.html
@@ -7,12 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="./css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="">Veterinaria</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,16 +22,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Mascotas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
+                <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
+                <a class="nav-link" href="/consultas.html">Consultas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
+                <a class="nav-link" href="/duenos.html">Dueños</a>
               </li>
             </ul>
             <form class="d-flex">
