--- a/veterinaria-fullstack/frontend/index.html
+++ b/veterinaria-fullstack/frontend/index.html
@@ -15,7 +15,6 @@
     <div class="container">
 
 
-
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,16 +23,16 @@
           <a class="navbar-brand" href="#">Veterinaria</a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-              <a class="nav-link" href="/veterinaria-fullstack/frontend/index.html">Mascotas<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index.html">Mascotas<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
+              <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link " href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
+              <a class="nav-link " href="/consultas.html">Consultas</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
+                  <a class="nav-link" href="/duenos.html">Dueños</a>
                   </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
