--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -9,10 +9,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <link rel="stylesheet" href="./css/styles.css" >
+    <link rel="stylesheet" href="./css/styles.css">
 
     <title>Hello, world!</title>
 </head>
@@ -70,6 +70,7 @@
                     <th scope="col">Mascota</th>
                     <th scope="col">Veterinari@</th>
                     <th scope="col">Diagnostico</th>
+                    <th scope="col">Historia</th>
                     <th scope="col">Creado</th>
                     <th scope="col">Editado</th>
                     <th scope="col"></th>
